Nangband ChangeLog - If it's not broken, let's fix it until it is.
==================

2002-06-29
----------
- Fiddled around with the cygwin and "standard" makefiles - they are
  (should be) much smaller in file size. (takkaria)
- Fixed a compiler warning in util.c. (takkaria)
- Made cave_info a u16b for pelpel to do some UI stuff. (takkaria)
- Fix for the Half-Troll & Elf races; they were broken.  Many thanks
  to Mogami! (takkaria)

2002-06-26
----------
- Added "evil mode" to Nangband - tread lightly! :) (takkaria)
- Fixed some index errors with the options tables. (takkaria)

2002-06-16
----------
- Fixed a compiler warning and added various files to ".cvsignore"s.
  (takkaria)

2002-06-12
----------
- Merged the experimental branch into the trunk. (takkaria)
- Cleaned out hundreds of warnings all over the source. (takkaria)

2002-06-04
----------
(experimental branch)
- New running code is working. (takkaria)

(normal branch)
- Changed some file headers.  Nangband is now completely GPL'd.
  (takkaria)

2002-06-02
----------
- Updated to the latest [v] CVS; this brings some niceties.
  (takkaria)
- [v] also brought a nasty; in character dumps, objects' abilities
  were shown on-screen rather than in the file - fixed. (takkaria)
- Fixed a typo in thanks.txt. (takkaria)
- Got autoconf & friends working again. (takkaria)
- Added weak hits, from Parodyingband. (parody)

2002-05-26
----------
- New RISC OS resources files for lua; fixed using some quick hacks.
  (ajps)
- A new set of RISC OS resources, with many changes and now looking
  much more like Angband source code. (takkaria)

2002-05-24
----------
- New randart code is in!  Savefile compatibility is lost, sadly.
  (takkaria)

2002-05-18
----------
- Moved divisions after multiplications in resist_player_current in
  two places, so that precisions aren't lost. (pelpel)

2002-05-12
----------
- Made timed resists decrement over time; quite cool code, don't know
  how to explain it clearly, really. (takkaria)